--- a/.gitignore
+++ b/.gitignore
@@ -122,7 +122,7 @@ project.xcworkspace
 /packages/react-native-test-library/android/build/
 android/app/.cxx/
 android/app/.cxx/debug
-android
+# android
 .cxx/
 
 
