--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-screens": "^4.6.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-swipe-list-view": "^3.2.9",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
